[package]
name = "lending-async-iterator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embassy-net = { version = "0.4.0", features = ["tcp", "proto-ipv4", "medium-ip"] }
pin-project = "1.1.5"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "rt", "time"] }

[lints.clippy]
pedantic = "warn"
